# skill-collision-checker

./: .gitignore  EVIDENCE.md  LICENSE  PRD.md  README.md  parking_lot.md  pyproject.toml
examples/: sample-report.html  sample-report.md  sample-report.txt
fixtures/skills/broad-reminder/: SKILL.md
fixtures/skills/changelog-writer/: SKILL.md
fixtures/skills/daily-standup/: SKILL.md
fixtures/skills/deploy-checklist/: SKILL.md
fixtures/skills/note-taker/: SKILL.md
fixtures/skills/quick-capture/: SKILL.md
fixtures/skills/set-reminder/: SKILL.md
fixtures/skills/standup-recap/: SKILL.md
scc/: __init__.py  audit.py  cli.py  collisions.py  discovery.py  report.py  signals.py
tests/: test_scc.py
